# weather_app_api

./: Cargo.toml  README.md
examples/: last.rs  week.rs  yesterday.rs
src/: lib.rs
