[package]
name = "weather_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[[example]]
name = "yesterday"

[[example]]
name = "last"

[[example]]
name = "week"

[dependencies]
minreq = { version = "2.5.1", features = ["json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
