[package]
name = "weather_api"
description = "A Simple api for my rest api server"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/MichalUSER/weather_app_api"
readme = "README.md"
keywords = ["http", "client", "api", "json"]
license = "MIT"

[lib]
doctest = false

[[example]]
name = "yesterday"

[[example]]
name = "last"

[[example]]
name = "week"

[dependencies]
minreq = { version = "2.5.1", features = ["json-using-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
